--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ html {
 
 body {
     height: 100%;
+    background-color:#cce2aa;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
     
 }
 a {
@@ -13,7 +18,7 @@ a {
 .main {
     height: 100%;
 }
-.social-image{
-    width: 30px;
+.mainimg{
+    width: 500px;
     margin: 15px;
 }
